--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ h1 {
   text-align: center;
   font-weight: bold;
   /* border: 4px solid black; */
-  text-shadow: -4px 0 black, 0 4px black, 4px 0 black, 0 -4px black;
+  /* text-shadow: -4px 0 black, 0 4px black, 4px 0 black, 0 -4px black; */
+  -webkit-text-stroke: 2px black; /* width and color */
   font-size: 7rem;
   font-family: fantasy;
   color: rgb(190, 4, 4);
