--- a/phone.css
+++ b/phone.css
@@ -45,12 +45,12 @@ h1 {
       font-size: 1.8rem;
   }
   .calculator {
-      width: 100%;
-      padding: 5px;
+      width: 90%;
+      /* padding: 5px; */
   }
   #display {
       font-size: 1.8rem;
-      padding: 8px;
+      /* padding: 8px; */
   }
   button {
       height: 40px;
