--- a/phone.css
+++ b/phone.css
@@ -31,7 +31,7 @@ h1 {
   }
   #display {
       font-size: 2rem;
-      padding: 10px;
+      /* padding: 10px; */
   }
   button {
       height: 45px;
@@ -50,7 +50,7 @@ h1 {
   }
   #display {
       font-size: 1.8rem;
-      /* padding: 8px; */
+      padding: 8px 0px;
   }
   button {
       height: 40px;
