--- a/phone.css
+++ b/phone.css
@@ -31,11 +31,11 @@ h1 {
   }
   #display {
       font-size: 2rem;
-      padding: 10px;
+      /* padding: 10px; */
   }
   button {
       height: 45px;
-      font-size: 1.2rem;
+      font-size: 1.25rem;
   }
 }
 
@@ -50,7 +50,7 @@ h1 {
   }
   #display {
       font-size: 1.8rem;
-      /* padding: 8px; */
+      padding: 8px 0px;
   }
   button {
       height: 40px;
